# graphscore

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CPPLINT.cfg  NOTICE
.claude/: settings.local.json
.claude/agents/: explore.md  orchestrator.md  reviewer.md  worker.md
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
.opencode/: opencode.json
.opencode/agents/: explore.md  orchestrator-openai-parallel.md  orchestrator-openai.md  orchestrator.md  reviewer-kimi-k3.md  reviewer.md  worker-terra.md  worker.md
.opencode/plugin/: command-classifier.ts.disabled
apps/: CMakeLists.txt  graphscore_plugin_scanner.cpp  graphscore_writer_app.cpp
cmake/: ArchitectureAudit.cmake  CompilerGate.cmake  ConstCorrectness.cmake  GraphScoreRuntimeConfig.cmake.in  Lint.cmake  RuntimePackage.cmake  SDL3.cmake  Sanitizers.cmake  Warnings.cmake  architecture_contract.cmake  audit_common.cmake  audit_link_closure.cmake  audit_permitted_edges.cmake  audit_transitive_closure.cmake  dependencies.cmake  run_lint.cmake
docs/: NOTICES.md
docs/decisions/: 0001-permissive-dependency-policy.md  0002-default-writer-dependency-baseline.md  0003-architecture-target-dag.md  0004-rendering-accessibility-spike.md  0005-engraving-engine-spike.md  0006-cooked-format-direction.md  0007-direct-vst3-hosting.md  README.md
docs/licenses/: FreeType-zlib-license.txt
docs/plan/: 00-architecture-spikes.md  01-toolchain-ci.md  02-domain-model.md  03-persistence-export.md  04-runtime-foundation.md  05-notation-editor.md  06-graph-canvas.md  07-adaptive-transitions.md  08-audio-vst.md  09-writer-integration.md  10-hardening.md  11-engine-release.md  12-midi-cc.md  CHECKLIST.md  M02_HANDOFF.md  M0_HANDOFF.md  M0_STATUS.md  M1_STATUS.md  README.md
include/graphscore/accessibility/: graphscore_accessibility.hpp
include/graphscore/accessibility_platform/: graphscore_accessibility_platform.hpp
include/graphscore/audio_device/: graphscore_audio_device.hpp
include/graphscore/c_abi/: .clang-tidy  graphscore_c_abi.h
logs/: llm.jsonl
scripts/: audit_cycles.py  audit_includes.py  audit_runtime_symbols.py  audit_third_party_types.py  bootstrap.sh  graphscore_audit.py
src/: CMakeLists.txt
src/accessibility/: CMakeLists.txt  accessibility.cpp
src/accessibility_platform/: CMakeLists.txt  accessibility_platform.cpp
src/audio_device/: CMakeLists.txt  audio_device.cpp
src/c_abi/: CMakeLists.txt
src/canvas/: CMakeLists.txt  canvas.cpp
src/compiler/: CMakeLists.txt  compiler.cpp
src/cooked_format/: CMakeLists.txt  cooked_format.cpp
src/core/: CMakeLists.txt  core.cpp  playback_mapping.cpp  tempo_curve.cpp  uuid.cpp
src/domain/: CMakeLists.txt  add_input_connector_command.cpp  add_output_connector_command.cpp  archive_track_command.cpp  bind_output_event_command.cpp  clef_lane.cpp  command_history.cpp  command_transaction.cpp  connect_command.cpp  connector.cpp  disconnect_command.cpp  domain.cpp  event_queue.cpp  event_registry.cpp  event_state_machine.cpp  graph.cpp  measure_map.cpp  midi_ownership.cpp  node.cpp  node_timeline.cpp  notation_event.cpp  notation_markings.cpp  notation_playback.cpp  notation_validation.cpp  pickdown_bound_oracle.cpp  pickdown_coordinates.cpp  pickdown_ownership.cpp  project.cpp  remove_input_connector_command.cpp  remove_output_connector_command.cpp  reset_route_command.cpp  restore_track_command.cpp  route_geometry.cpp  set_custom_route_command.cpp  set_input_connector_name_command.cpp  set_listener_policy_command.cpp  set_node_color_command.cpp  set_node_name_command.cpp  set_node_notes_command.cpp  set_node_position_command.cpp  (+20 more)
src/loader/: CMakeLists.txt  loader.cpp
src/midi_io/: CMakeLists.txt  midi_io.cpp
src/notation/: CMakeLists.txt  notation.cpp
src/persistence/: CMakeLists.txt  persistence.cpp
src/plugin_scanner_client/: CMakeLists.txt  plugin_scanner_client.cpp
src/rendering/: CMakeLists.txt  rendering.cpp
src/runtime/: CMakeLists.txt  runtime.cpp
src/runtime_impl/: CMakeLists.txt  runtime_impl.cpp
src/scheduler/: CMakeLists.txt  scheduler.cpp
src/vst3_host/: CMakeLists.txt  vst3_host.cpp
src/writer_audio/: CMakeLists.txt  writer_audio.cpp
src/writer_shell/: CMakeLists.txt  writer_shell.cpp
tests/: .clang-tidy  CMakeLists.txt
tests/c_abi/: CMakeLists.txt  test_c_consumer.c
tests/cmake/: CMakeLists.txt  consumer_test.cpp  run_consumer_test.cmake
tests/cmake/consumer/: CMakeLists.txt  consumer_test.c  consumer_test.cpp
tests/cmake/writer_leak/: CMakeLists.txt  writer_leak_probe.cpp
tests/compiler/: CMakeLists.txt  compiler_test.cpp
tests/cooked_format/: CMakeLists.txt  cooked_format_test.cpp
tests/core/: CMakeLists.txt  core_test.cpp  deterministic_prng_test.cpp  duration_test.cpp  midi_test.cpp  notation_value_test.cpp  playback_mapping_test.cpp  rational_test.cpp  spelled_pitch_test.cpp  strong_id_test.cpp  tempo_curve_test.cpp
tests/domain/: CMakeLists.txt  articulation_test.cpp  clef_lane_test.cpp  command_test.cpp  connector_test.cpp  domain_test.cpp  event_queue_test.cpp  event_registry_test.cpp  event_state_machine_test.cpp  graph_test.cpp  lane_alignment_test.cpp  measure_map_test.cpp  midi_ownership_test.cpp  node_timeline_test.cpp  notation_event_test.cpp  notation_markings_test.cpp  notation_playback_test.cpp  notation_validation_test.cpp  pickdown_bound_oracle_test.cpp  pickdown_coordinates_test.cpp  pickdown_ownership_test.cpp  project_track_test.cpp  route_geometry_test.cpp  tempo_lane_test.cpp  track_test.cpp  vertical_transition_test.cpp  voice_content_test.cpp  voice_normalization_test.cpp  weighted_selection_test.cpp  writer_audition_test.cpp
tests/loader/: CMakeLists.txt  loader_test.cpp
tests/persistence/: CMakeLists.txt  persistence_test.cpp
tests/repository/: CMakeLists.txt  check_offline_dependencies.cmake  check_symlink.cmake
tests/runtime/: CMakeLists.txt  runtime_test.cpp
tests/scheduler/: CMakeLists.txt  scheduler_test.cpp
tests/smoke/: CMakeLists.txt  foundation_smoke_test.cpp
tests/writer_shell/: CMakeLists.txt
(+164 files in other folders)
