# SPDX-License-Identifier: Apache-2.0

add_subdirectory(core)
add_subdirectory(c_abi)
add_subdirectory(domain)
add_subdirectory(cooked_format)
add_subdirectory(compiler)
add_subdirectory(persistence)
add_subdirectory(scheduler)
add_subdirectory(loader)
add_subdirectory(runtime_impl)
add_subdirectory(runtime)
add_subdirectory(notation)
add_subdirectory(rendering)
add_subdirectory(accessibility)
add_subdirectory(canvas)
add_subdirectory(writer_shell)
add_subdirectory(audio_device)
add_subdirectory(midi_io)
add_subdirectory(vst3_host)
add_subdirectory(writer_audio)
add_subdirectory(accessibility_platform)
add_subdirectory(plugin_scanner_client)
