# SPDX-License-Identifier: Apache-2.0

include(GoogleTest)

add_subdirectory(core)
add_subdirectory(c_abi)
add_subdirectory(domain)
add_subdirectory(cooked_format)
add_subdirectory(compiler)
add_subdirectory(persistence)
add_subdirectory(scheduler)
add_subdirectory(loader)
add_subdirectory(runtime)
add_subdirectory(cmake)
